fix button alignment

--- a/src/styles/starMapUI.scss
+++ b/src/styles/starMapUI.scss
@@ -28,9 +28,7 @@
 
     .buttonContainer {
       display: flex;
-      justify-content: space-between;
       column-gap: 5px;
-      flex:2;
     }
 
     button {
